--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@google-cloud/trace-agent": "^4.2.5",
     "lodash.get": "^4.4.2"
   }
 }
