--- a/package.json
+++ b/package.json
@@ -6,8 +6,22 @@
   "author": "Makoto Kinoshita",
   "license": "MIT",
   "private": false,
+  "engines": {
+    "node": ">=8.0.0"
+  },
+  "scripts": {
+    "test": "tap 'test/**/*.js'",
+    "test-ci": "tap --cov 'test/**/*.js'",
+    "lint": "standard",
+    "lint-ci": "standard"
+  },
   "dependencies": {
     "@google-cloud/trace-agent": "^4.2.5",
     "lodash.get": "^4.4.2"
+  },
+  "devDependencies": {
+    "rewire": "^5.0.0",
+    "tap": "^14.10.7",
+    "standard": "^14.3.3"
   }
 }
