--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   },
   "dependencies": {
     "@google-cloud/trace-agent": "^4.2.5",
+    "fastify-plugin": "^1.6.1",
     "lodash.get": "^4.4.2"
   },
   "devDependencies": {
     "rewire": "^5.0.0",
-    "tap": "^14.10.7",
-    "standard": "^14.3.3"
+    "standard": "^14.3.3",
+    "tap": "^14.10.7"
   }
 }
