--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ language: node_js
 node_js:
   - "10"
   - "8"
-  - "6"
 
 script:
-  - npm run lint-ci
-  - npm run test-ci
+  - npm run lint
+  - npm run test
