--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fastify-gcloud-trace",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Google Cloud Trace API Connector for Fastify",
   "main": "index.js",
   "author": "Makoto Kinoshita",
@@ -8,7 +8,13 @@
     "type": "git",
     "url": "git+https://github.com/mkinoshi/fastify-gcloud-trace.git"
   },
-  "keywords": ["plugin", "stackdriver", "google cloud", "trace", "fastify"],
+  "keywords": [
+    "plugin",
+    "stackdriver",
+    "google cloud",
+    "trace",
+    "fastify"
+  ],
   "license": "MIT",
   "private": false,
   "engines": {
