--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "fastify-gcloud-trace",
+  "version": "1.0.3",
   "version": "1.0.2",
   "description": "Google Cloud Trace API Connector for Fastify",
   "main": "index.js",
